--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -22,7 +22,7 @@
   {% if logo %}
   <link rel="preload" as="image" href="{{ logo }}">
   {% endif %}
-  <script type="text/javascript" src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+  {# <script type="text/javascript" src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script> #}
   {# <link rel="preload" href="catalog/view/theme/helium/css/fonts/fontello.woff2" as="font" type="font/woff2" crossorigin>  #}
   {% for style in styles %}
     <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
