--- a/catalog/view/theme/helium/template/common/menu.twig
+++ b/catalog/view/theme/helium/template/common/menu.twig
@@ -1,6 +1,6 @@
 {% if categories %}
   <button type="button" id="main-menu-trigger" class="primary dropdown-toggle main-menu-trigger" aria-label="{{ text_category }}">
-    <div class="icon nav-icon-1">
+    <div class="icon menu-icon">
       <span></span>
       <span></span>
       <span></span>
