--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -102,7 +102,7 @@ body, header, main, footer {
 	flex: 1;
 	max-width: 100%;
 	gap: var(--padding); /* Отступ между основными блоками */
-	
+	align-self: flex-start;
 }
 body > * {background:var(--background-blocks);padding: var(--padding);}
 
@@ -157,8 +157,11 @@ footer {column-gap: 1rem;order: 6;}
 	background: var(--background-blocks);
 	background: #fff;
 	text-align: center;
-	padding: var(--padding);
+	
 }
+/* .subcategory .h6 {
+	padding: var(--padding);
+} */
 
 .popular-links > a.button {padding: .3rem .5rem;}
 .popular-links > * {
@@ -184,6 +187,9 @@ footer {column-gap: 1rem;order: 6;}
 	scroll-snap-type: x mandatory;
 	scroll-behavior: smooth;
 	gap: 1rem;
+	/* Make overfloving flags visible */
+	padding: 0 .5rem;
+	margin: 0 -1rem;
 }
 /* Scroll snap on modules */
 .module-product-list .miniature {
@@ -220,8 +226,10 @@ figcaption {
 
 .miniature {
 	background: #fff;
-	padding: var(--padding);
 	position: relative;
+}
+.miniature .infos {
+	padding: var(--padding);
 }
 
 .miniature, .miniature > .infos, .caption {
@@ -757,14 +765,24 @@ input[type=range]:focus::-ms-fill-upper {
 /* -----Links --------- */
 a {
 	text-decoration:none;
-	color:var(--tetriary-color)
+	color:var(--tetriary-color);
+	/* Prettyfy links when they are focused */
+	border-radius: var(--radius);
+	display: inline-block;
+	background: transparent;
 }
-a:hover {
+
+/* a:hover {
 	text-decoration:underline
-}
-a:hover * {
+} */
+a:hover, a:hover * {
 	text-decoration:none
 }
+a:focus {
+	outline: none;
+	box-shadow: 0 0 0 2px var(--tetriary-color);
+}
+
 /* -------------------- */
 
 
@@ -967,6 +985,9 @@ button.primary:hover {
 button.primary:active {
     box-shadow: inset 1px 1px 4px 1px #2a2a3ac7, inset -1px -1px 1px 1px #53535682;
 }
+button.primary:focus {
+	box-shadow: inset 0 0 0 3px #00000090;
+}
 button.primary[disabled], a.primary[disabled] {
 	background: #777;
 }
@@ -1116,8 +1137,9 @@ nav > div {
 }
 
 .scroll-x {
-	margin: 0;
-	padding: 0;
+	/* Set margin and padding so when element is focused box-shadow is visible */
+	margin: -2px;
+	padding: 2px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -1129,6 +1151,8 @@ nav > div {
 	gap: 1rem;
 	white-space: nowrap;
 }
+
+
 
 hgroup {
 	text-transform: uppercase;
@@ -1610,7 +1634,7 @@ input[type="checkbox"]::before, input[type="radio"]::before {
 	transition: var(--animation-duration) transform cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	box-shadow: inset 1em 1em var(--primary-color);
 	/* Windows High Contrast Mode */
-	background-color: CanvasText;
+	/* background-color: CanvasText; */
 	will-change: auto;
 }
 
