ADD: Add ARIA attributes for all templates

--- a/catalog/view/theme/helium/template/account/address_list.twig
+++ b/catalog/view/theme/helium/template/account/address_list.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-address">
+<main role="main" id="account-address">
   {% if success %}
     <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
