--- a/catalog/view/theme/helium/template/account/download.twig
+++ b/catalog/view/theme/helium/template/account/download.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
     
-<main id="downloads">
+<main role="main" id="downloads">
   {{ content_top }}
   <h2>{{ heading_title }}</h2>
 
