--- a/catalog/view/theme/helium/template/account/order_info.twig
+++ b/catalog/view/theme/helium/template/account/order_info.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-order">
+<main role="main" id="account-order">
   {% if success %}
   <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}
     <button type="button" class="close" data-dismiss="alert">&times;</button>
