--- a/catalog/view/theme/helium/template/account/password.twig
+++ b/catalog/view/theme/helium/template/account/password.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-password">
+<main role="main" id="account-password">
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
   <form action="{{ action }}" method="post" enctype="multipart/form-data" >
