--- a/catalog/view/theme/helium/template/account/reward.twig
+++ b/catalog/view/theme/helium/template/account/reward.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-reward">
+<main role="main" id="account-reward">
   <h1>{{ heading_title }}</h1>
     {{ content_top }}
       <p>{{ text_total }} <b>{{ total }}</b>.</p>
