--- a/catalog/view/theme/helium/template/account/tracking.twig
+++ b/catalog/view/theme/helium/template/account/tracking.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-tracking">
+<main role="main" id="account-tracking">
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
   <p>{{ text_description }}</p>
