--- a/catalog/view/theme/helium/template/blog/article_miniature.twig
+++ b/catalog/view/theme/helium/template/blog/article_miniature.twig
@@ -1,5 +1,5 @@
-<article class="miniature">
-  <figure class="image">
+<article role="article" class="miniature">
+  <figure role="img" aria-label="{{ article.name }}" class="image">
     <a href="{{ article.href }}" title="{{ article.name }}">
       <img loading="lazy" width="{{ article.width }}" height="{{ article.height }}" src="{{ article.thumb }}" alt="{{ article.name }}" title="{{ article.name }}" class="img-responsive" />
     </a>
