--- a/catalog/view/theme/helium/template/checkout/cart.twig
+++ b/catalog/view/theme/helium/template/checkout/cart.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="checkout-cart">
+<main role="main" id="checkout-cart">
   {% if attention %}
   <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ attention }}
     <button type="button" class="close" data-dismiss="alert">&times;</button>
