--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -66,7 +66,7 @@
 <body>
 <header>
   <nav id="top">
-    <div class="logo">
+    <div role="presentation" class="logo">
       {% if logo %}
         <a href="{{ home }}">
           <img src="{{ logo }}" title="{{ name }}" alt="{{ name }}" width="{{ logo_width }}" height="{{ logo_height }}" class="img-responsive" />
