--- a/catalog/view/theme/helium/template/common/maintenance.twig
+++ b/catalog/view/theme/helium/template/common/maintenance.twig
@@ -1,5 +1,5 @@
 {{ header }}
-<main id="common-maintenance">
+<main role="main" id="common-maintenance">
   <div class="row">
     {{ message }}
   </div>
