--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="common-success">
+<main role="main" id="common-success">
   <div class="row">
     {{ content_top }}
     <div>
