--- a/catalog/view/theme/helium/template/information/contact.twig
+++ b/catalog/view/theme/helium/template/information/contact.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="information-contact">
+<main role="main" id="information-contact">
   {{ content_top }}
   <h1>{{ heading_title }}</h1>
   <h3>{{ text_location }}</h3>
