--- a/catalog/view/theme/helium/template/information/information.twig
+++ b/catalog/view/theme/helium/template/information/information.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="information" >
+<main role="main" id="information" >
   <div class="row">
   {{ content_top }}
     <div id="content">
