--- a/catalog/view/theme/helium/template/information/sitemap.twig
+++ b/catalog/view/theme/helium/template/information/sitemap.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 
-<main>
+<main role="main">
 
 {{ content_top }}
       <h1>{{ heading_title }}</h1>
