--- a/catalog/view/theme/helium/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/helium/template/product/manufacturer_info.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="product-manufacturer">
+<main role="main" id="product-manufacturer">
   <h1>{{ heading_title }}</h1>
 
 
