--- a/catalog/view/theme/helium/template/account/address_form.twig
+++ b/catalog/view/theme/helium/template/account/address_form.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-address">
+<main role="main" id="account-address">
   {{ content_top }}
   <h2>{{ text_address }}</h2>
   
