--- a/catalog/view/theme/helium/template/account/login.twig
+++ b/catalog/view/theme/helium/template/account/login.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-login">
+<main role="main" id="account-login">
   {% if success %}
   <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
