--- a/catalog/view/theme/helium/template/account/recurring_list.twig
+++ b/catalog/view/theme/helium/template/account/recurring_list.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-recurring">
+<main role="main" id="account-recurring">
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
   {% if recurrings %}
