--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -1,5 +1,5 @@
 {{ header }}
-<main id="account-return">
+<main role="main" id="account-return">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
     <li><a href="{{ breadcrumb.href }}"> {{ breadcrumb.text }}</a></li>
