--- a/catalog/view/theme/helium/template/account/return_info.twig
+++ b/catalog/view/theme/helium/template/account/return_info.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-return">
+<main role="main" id="account-return">
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
   <table class="table table-bordered table-hover">
