--- a/catalog/view/theme/helium/template/affiliate/login.twig
+++ b/catalog/view/theme/helium/template/affiliate/login.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="affiliate-login">
+<main role="main" id="affiliate-login">
   {% if success %}
     <div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> {{ success }}</div>
   {% endif %}
