--- a/catalog/view/theme/helium/template/affiliate/register.twig
+++ b/catalog/view/theme/helium/template/affiliate/register.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="affiliate-register">
+<main role="main" id="affiliate-register">
 
   {% if error_warning %}
     <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
