--- a/catalog/view/theme/helium/template/blog/category.twig
+++ b/catalog/view/theme/helium/template/blog/category.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="blog-category">
+<main role="main" id="blog-category">
   <h1>{{ heading_title }}</h1>
   {% if thumb or description %}
       {% if thumb %}
