--- a/catalog/view/theme/helium/template/blog/latest.twig
+++ b/catalog/view/theme/helium/template/blog/latest.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main>
+<main role="main">
 {{ content_top }}
   <div class="row">
     <div id="content">
