--- a/catalog/view/theme/helium/template/error/not_found.twig
+++ b/catalog/view/theme/helium/template/error/not_found.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="error-not-found">
+<main role="main" id="error-not-found">
   {{ content_top }}
   <h1>{{ heading_title }}</h1>
   <p>{{ text_error }}</p>
