--- a/catalog/view/theme/helium/template/product/review.twig
+++ b/catalog/view/theme/helium/template/product/review.twig
@@ -1,7 +1,7 @@
 {% if review_list.reviews %}
 <div id="js-reviews">
   {% for review in review_list.reviews %}
-    <table class="table table-striped table-bordered js-product-review">
+    <table role="comment" class="table table-striped table-bordered js-product-review">
       <tr>
         <td style="width: 50%;"><span class="strong">{% if review.author %}{{ review.author }}{% endif %}</span></td>
         <td class="text-right">{{ review.date_added }}</td>
