--- a/catalog/view/theme/helium/template/product/special.twig
+++ b/catalog/view/theme/helium/template/product/special.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="special-products">
+<main role="main" id="special-products">
   <h1>{{ heading_title }}</h1>
       {% if products %}
         <div class="row category-sort">
