--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -72,10 +72,10 @@ aside .module {
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 100%; */
-	display: grid;
-	grid-template-columns: 1fr;
-	position: relative;
-	gap: var(--padding);
+    display: grid;
+    grid-template-columns: 1fr;
+    position: relative;
+    /* gap: var(--padding); */
 }
 aside .module .h3,
 aside .module .primary {
@@ -183,13 +183,13 @@ footer {column-gap: 1rem;order: 6;}
 .module-product-list {
     flex-wrap: nowrap;
     overflow-x: auto;
-	display: flex;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	gap: 1rem;
+    display: flex;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    /* gap: 1.6rem; */
 	/* Make overfloving flags visible */
-	padding: 0 .5rem;
-	margin: 0 -1rem;
+    /* padding: 0 .5rem; */
+    /* margin: 0 -1rem; */
 }
 /* Scroll snap on modules */
 .module-product-list .miniature {
@@ -197,6 +197,7 @@ footer {column-gap: 1rem;order: 6;}
 	scroll-snap-align: center;
 	flex: 1 1 auto;
 	min-width: min(360px, 100%);
+	margin: 0 1rem;
 }
 
 .caption > .short-description {
@@ -873,45 +874,57 @@ tbody tr:nth-child(2n) button:hover {
 } */
 
 
-/* details {
+details {
 	display:flex;
 	flex-direction:column;
 	align-items:flex-start;
 	background-color:#f7f7f7;
-	background-color:var(--background-inputs);
-	padding:10px 10px 0;
-	margin:1em 0;
+	background-color:var(--background-blocks);
+	padding:0;
+	margin:0;
 	overflow:hidden
 }
 details[open] {
-	padding:10px
+	padding:0
 }
 details>:last-child {
 	margin-bottom:0
 }
 details[open] summary {
-	margin-bottom:10px
+	margin-bottom:0
 }
+
 summary {
-	display:list-item;
-	background-color:#efefef;
 	background-color:var(--background-blocks);
-	padding:10px;
-	margin:-10px -10px 0;
+	border: 2px solid transparent;
+	outline: none;
 	cursor:pointer;
-	outline:none
+	padding:0;
+	margin:0;
+	display: flex;
 }
-summary:focus,
-summary:hover {
-	text-decoration:underline
+details>summary::before {
+	content: "\2BC8";
+	padding-right: .5rem;
 }
+details[open]>summary::before {
+	content: "\2BC6";
+	padding-right: .5rem;
+}
+summary:focus {
+	border-color: var(--focus);
+}
+
 details>:not(summary) {
 	margin-top:0
 }
 summary::-webkit-details-marker {
 	color:#363636;
 	color:var(--text-main)
-} */
+}
+details[disabled] {
+	color: var(--text-muted);
+}
 
 
 
@@ -1423,18 +1436,19 @@ button.menu-back {
 	transition: var(--transition);
 	background: #fff;
 	margin: 0;
-	padding: 0;
+	padding: .2rem;
 	overflow-y: auto;
 	height: 50vh;
 }
 
 #main-menu li {
 	list-style-type: none;
-	margin: 0;
+	margin: .1rem 0;
 	padding: 0;
 	display: grid;
 	grid-template-columns: 300px 40px 40px;
-	align-items: baseline;
+	align-items: center;
+	grid-template-rows: 50px;
 }
 
 #main-menu a {
